--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <img src="CD Book.png" alt="CD Book" />
         </div>
     </div>
+
+    <div class="back-icon">
+        <a href="https://alexandrap187.github.io/clock/">
+            <img id="backIcon" src="back.png" alt="Back" />
+        </a>
+    </div> 
 </body>
 
 </html>
