--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
             <h1>About Me</h1>
             <p>My name is Alexandra Purdy and I am a graphic design student at Boston University. I recently have become interested in user interface design and web design, and hope to continue exploring those during my senior year thesis. </p>
             <br>
-            <p>I encourage you to explore the rest of my work on my portfolio website!</p>
-            <br>
-            <a href="https://www.alexandrapurdy.com" target="_blank">alexandrapurdy.com</a>
+            <p>I encourage you to explore the rest of my work on my <a href="https://www.alexandrapurdy.com" target="_blank">portfolio website</a>!</p>
         </div>
         <div class="column">
             <h1>CD Book</h1>
